# engine/syncer_types.go
@@ -1,11 +1,26 @@
 package engine
 
+// Retrieve rate limit for exchange systems
+// Derive max protocol through put via exchange rate limit
+// Retrieve exchange functionality
+// Create sync agent for individual item with interval for update
+// Allocate sync agent to low to high priority pools
+// allocate a high low priority job buffer
+// workers wait on channel
+// Rate limit atomic counter
+//
+
+// Initial sync group == trades, account info including orders/fees, orderbook
+// background items == ticker, ohlc etc
+// priority items == trades, orders, fees, orderbook
+
 import (
 	"sync"
 	"time"
 
 	"github.com/thrasher-corp/gocryptotrader/currency"
 	"github.com/thrasher-corp/gocryptotrader/exchanges/asset"
+	"github.com/thrasher-corp/gocryptotrader/exchanges/protocol"
 )
 
 // CurrencyPairSyncerConfig stores the currency pair config
@@ -25,37 +40,36 @@ type ExchangeSyncerConfig struct {
 	SyncOrders           bool
 }
 
-// ExchangeCurrencyPairSyncer stores the exchange currency pair syncer object
-type ExchangeCurrencyPairSyncer struct {
-	Cfg                      CurrencyPairSyncerConfig
-	CurrencyPairs            []CurrencyPairSyncAgent
+// SyncManager stores the exchange currency pair syncer object
+type SyncManager struct {
+	Config                   SyncConfig
+	SyncAgents               []*SyncAgent
 	tickerBatchLastRequested map[string]time.Time
-	mux                      sync.Mutex
-	initSyncWG               sync.WaitGroup
 
-	initSyncCompleted int32
-	initSyncStarted   int32
 	initSyncStartTime time.Time
 	shutdown          int32
+	initialChan       chan struct{}
+	initSync          sync.WaitGroup
+	sync.RWMutex
 }
 
 // SyncBase stores information
 type SyncBase struct {
-	IsUsingWebsocket bool
-	IsUsingREST      bool
-	IsProcessing     bool
-	LastUpdated      time.Time
-	HaveData         bool
-	NumErrors        int
+	IsProcessing int32
+	LastUpdated  time.Time
+	HaveData     bool
+	NumErrors    int
 }
 
-// CurrencyPairSyncAgent stores the sync agent info
-type CurrencyPairSyncAgent struct {
-	Created   time.Time
-	Exchange  string
-	AssetType asset.Item
-	Pair      currency.Pair
-	Ticker    SyncBase
-	Orderbook SyncBase
-	Trade     SyncBase
+// SyncAgent stores the sync agent info
+type SyncAgent struct {
+	Created       time.Time
+	Exchange      string
+	AssetType     asset.Item
+	Pair          currency.Pair
+	Features      *protocol.Features
+	Ticker        *SyncBase
+	Orderbook     *SyncBase
+	Trade         *SyncBase
+	HistoricTrade *SyncBase
 }
